# dez

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: dez-build.yml  dez-guards.yml
assets/dez/: codex-hooks.json
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json  vim.json
assets/keymaps/linux/: atom.json  jetbrains.json  sublime_text.json
assets/settings/: default.json  initial_user_settings.json
assets/themes/: LICENSES
crates/breadcrumbs/: Cargo.toml
crates/cli/: README.md
crates/command_palette/: Cargo.toml
crates/csv_preview/: Cargo.toml
crates/dez_terminal_host/: AGENTS.md  Cargo.toml
crates/dez_terminal_host/src/: main.rs
crates/diagnostics/: Cargo.toml
crates/editor/: Cargo.toml
crates/encoding_selector/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/line_ending_selector/: Cargo.toml
crates/notifications/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/outline_panel/: Cargo.toml
crates/picker/: Cargo.toml
crates/project_panel/: Cargo.toml
crates/search/: Cargo.toml
crates/session/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/sidebar/: Cargo.toml
crates/tasks_ui/: Cargo.toml
crates/terminal/: Cargo.toml
crates/terminal_view/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/workspace/: Cargo.toml
crates/zed/: Cargo.toml
docs/src/: SUMMARY.md  appearance.md  dez.md  getting-started.md  project-panel.md  terminal.md  vim.md  visual-customization.md  windows-and-projects.md
script/: bundle-mac  debug-cli  dez-identity-check  dez-theme-check  zed-local
(+308 files in other folders)
