[package]
name = "dez_terminal_host"
version = "0.0.1"
edition.workspace = true
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "dez-terminal-host"
path = "src/main.rs"
doctest = false

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
clap.workspace = true
futures-lite.workspace = true
net.workspace = true
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
terminal.workspace = true
